# MapReduce

./: CMakeLists.txt  README.md  main.cpp
mapReduce_src/: CMakeLists.txt  Mapper.cpp  Mapper.h  Reducer.cpp  Reducer.h  StringComputer.cpp  StringComputer.h
mapReduce_test/: CMakeLists.txt
mapReduce_test/tests/: CMakeLists.txt  MapReduceTest.cpp  MapperTest.cpp  ReducerTest.cpp  StringComputer.cpp
